BE Add CRUD operations for contacts
