# backend/contacts/contacts.controller.ts
@@ -4,14 +4,9 @@ import ContactsModel from './contacts.model';
 
 async function getContacts(ctx) {
   const { orderBy, orderDirection, offset, count } = ctx.query;
-  // TODO: orderBy validation
-  // TODO: pagination 
-  // console.log(orderBy, orderDirection, offset, count);
-  // const allowedOrderBy = ['name', 'phone', 'createdAt', 'updatedAt'];
-  // const allowedOrderDirection = ['ASC', 'DESC'];
-  const contacts: IContact[] = await ContactsModel.model.findAll({
-    order: [[orderBy || 'name', orderDirection || 'ASC']]
-  });
+  const contacts: IContact[] = await ContactsModel.findAll(
+    {}, count, offset, [[orderBy || 'name', orderDirection || 'ASC']]
+  );
 
   ctx.body = contacts;
 }
@@ -24,19 +19,31 @@ async function createContact(ctx) {
 }
 
 async function updateContact(ctx) {
+  const { id } = ctx.params;
+  const { name, phone } = ctx.request.body;
+  const contact: IContact = await ContactsModel.update(id, { name, phone });
+
+  ctx.body = contact;
 }
 
 async function deleteContact(ctx) {
+  const { id } = ctx.params;
+  await ContactsModel.delete(id);
+
+  ctx.body = 'Success.';
 }
 
 export const routes = {
+  delete: {
+    '/contacts/:id': deleteContact,
+  },
   get: {
     '/contacts': getContacts,
   },
   post: {
-    '/contacts/create': createContact,
-    '/contacts/update': updateContact,
-    // TODO: delete HTTP method
-    '/contacts/delete': deleteContact,
+    '/contacts': createContact,
+  },
+  put: {
+    '/contacts/:id': updateContact,
   }
 };
